# Conways_game_of_life

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  theory_conways_game_of_life.nb  visualization.cpp
Game_of_life/: game_of_life.h
game_of_life/: game_of_life.cpp  game_of_life.h
game_of_life_opt/: game_of_life_opt.h
matrix_class/: matrix.h
statistical_analysis/: data.csv  statistical_analysis.cpp  statistical_analysis.py  theory_conways_game_of_life.nb
tests/: GameOfLifeTests.cpp  tests.cpp
